# Survival-of-the-Fittest

./: CMakeLists.txt  README.md  package.xml  setup.py
demos/: project_demo.ipynb
demos/.ipynb_checkpoints/: project_demo-checkpoint.ipynb
launch/: ant_foraging.launch
nodes/: ant  controller  nest
srv/: AntStart  GetNextLocations.srv  InitNest.srv  UpdateNest.srv
world/: ant_world.world
