<?xml version="1.0"?>
<package>
  <name>Survival-of-the-Fittest</name>
  <version>0.0.0</version>
  <description>Foraging with Ant Optomization</description>

  <maintainer email="class@class.edu">Class</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>